refactoring exceptions and end-to-end route optimization flow